--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,10 @@ magic-filter==1.0.12
 Mako==1.3.10
 MarkupSafe==3.0.2
 multidict==6.4.4
+mypy==1.16.0
+mypy_extensions==1.1.0
 openai==1.86.0
+pathspec==0.12.1
 propcache==0.3.2
 psycopg2-binary==2.9.10
 pydantic==2.11.5
