--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,8 @@ psycopg2-binary==2.9.10
 pydantic==2.11.5
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
+PyMuPDF==1.26.1
+pyrefly==0.19.0
 python-dotenv==1.1.0
 pytz==2025.2
 sniffio==1.3.1
